// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPreSignedURL handler should return an error when invalid body data 1`] = `
Object {
  "body": "{\\"error\\":\\"JSON payload invalid. Ensure you provide an object with 'namespace', 'name', 'provider' and 'version' parameters\\"}",
  "headers": Object {
    "content-type": "application/json",
  },
  "statusCode": 400,
}
`;

exports[`createPreSignedURL handler should return an error when missing body data 1`] = `
Object {
  "body": "{\\"error\\":\\"JSON payload invalid. Ensure you provide an object with 'namespace', 'name', 'provider' and 'version' parameters\\"}",
  "headers": Object {
    "content-type": "application/json",
  },
  "statusCode": 400,
}
`;

exports[`createPreSignedURL handler should return an error when missing/invalid "type" querystring 1`] = `
Object {
  "body": "{\\"error\\":\\"You need to specify a 'type' for this request. e.g. /pre-sign?type=module or /pre-sign?type=provider\\"}",
  "headers": Object {
    "content-type": "application/json",
  },
  "statusCode": 400,
}
`;
